--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.9.0"
+    "@tailwindcss/vite": "^4.1.8",
+    "animejs": "^4.0.2",
+    "astro": "^5.9.0",
+    "tailwindcss": "^4.1.8"
   }
 }
