--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tailwindcss/vite": "^4.1.8",
     "astro": "^5.9.0",
     "gsap": "^3.13.0",
-    "tailwindcss": "^4.1.8"
+    "tailwindcss": "^4.1.8",
+    "two-up-element": "^1.0.1"
   }
 }
